flagger/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "narrowspark.com"
        - "k8hooks.narrowspark.com"
        - "automatic.narrowspark.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: narrowspark.com-crt-mzgqf
      hosts:
        - "narrowspark.com"
        - "k8hooks.narrowspark.com"
        - "automatic.narrowspark.com"
